# httprunner

./: .gitignore  .project  .pydevproject  .travis.yml  404.html  CHANGELOG.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.en.md  README.md  README.rst  api.rst  boomer.go  boomer_test.go  build.go  compat.go  conf.py  config.go  convert.go  convert_test.go  converter.py  dfsdf  extract.go  go.mod  go.sum  go_plugin_test.go  google_style.py  hashicorp_plugin_test.go  index.html  index.rst  loader.go  log.go  logger.go  main-ate.py  main-debug.py  main-hrun.py  (+51 more)
CHANGELOG/: index.html
FAQ/: index.html
Installation/: index.html
ate/: __init__.py  built_in.py  cli.py  client.py  context.py  debugtalk.py  exception.py  locustfile_template  locusts.py  main.py  response.py  runner.py  task.py  testcase.py  testfork  utils.py
builtin/: assertion.go  assertion_test.go  function.go
cli/: README.md
cmd/: build.go  convert.go  doc_test.go  mcphost.go  mcpserver.go  pytest.go  report.go  root.go  run.go  scaffold.go  server.go  wiki.go
code/: code.go  code_test.go
convert/: README.md  from_curl.go  from_curl_test.go  from_har.go  from_har_test.go  from_postman_test.go  from_swagger.go  main_test.go  testcase.tmpl
data/: debugtalk.py  demo-quickstart-3.json  demo-quickstart-5.json  demo-quickstart-6.json  demo-quickstart.yml  demo_parameters.yml
demo/: .debugtalk_gen.py  .env  proj.json
docs/: BUILTIN.md  CHANGELOG.md  CNAME  FAQ.md  FAQ.rst  Installation.md  Installation.rst  Introduction.md  Makefile  README.md  architecture.md  background-CN.md  boomer.md  builtin.md  comparator.md  conf.py  dev-instruct.md  dev-rules.md  development.md  doc_test.go  extraction-and-validation.md  feature-descriptions-CN.md  features-intro.md  index.md  index.rst  installation.md  load-test.md  parameters.md  quickstart.md  related-docs.md  run-testcases.md  sponsors.md  summary-structure.md  write-testcases.md  write-testcases.rst
examples/: compat_test.go  debugtalk.py  demo.har  demo.json  demo.yaml  demo_test.go  demo_test.py  extract_test.go  function_test.go  httpbingo_test.json  parameters_test.json  parameters_test.yaml  postman-echo.json  postman-echo.yaml  pytest.ini  quickstart-demo-rev-0.yml  quickstart-demo-rev-1.yml  quickstart-demo-rev-2.yml  quickstart-demo-rev-3.yml  ref_api_test.json  ref_api_test.yaml  ref_testcase_test.yaml  rendezvous_test.go  rendezvous_test.json  request_test.go  think_time_test.yaml  validate_test.go  variables_test.go
har2case/: README.md  core.go  core_test.go  main.go  main_test.go
hrp/: README.md  boomer.go  boomer_test.go  build.go  build_test.go  compat.go  config.go  convert.go  convert_test.go  extract.go  loader.go  loader_test.go  logger.go  main.go  models.go  parameters.go  parameters_test.go  parser.go  parser_test.go  plugin.go  plugin_test.go  response.go  response_test.go  runner.go  runner_test.go  server.go  session.go  step.go  step_android_ui.go  step_android_ui_test.go  step_api.go  step_function.go  step_grpc.go  step_grpc_test.go  step_ios_ui.go  step_ios_ui_test.go  step_mobile_ui.go  step_mobile_ui_test.go  step_rendezvous.go  step_rendezvous_test.go  (+14 more)
hrp2/: .gitignore  LICENSE  Makefile  convert.go  go.mod  models.go  parser_test.go  plugin.go  plugin_test.go  response_test.go  runner.go  step_test.go
httpboomer/: README.md  main.go
httprunner/: README.md  __about__.py  __init__.py  __main__.py  aoyou_app_demo.yml  api.py  api_test.py  built_in.py  cli.py  cli_test.py  client.py  client_test.py  compat.py  compat_test.py  config.py  context.py  events.py  exception.py  exceptions.py  loader.py  loader_test.py  locustfile_template  locusts.py  logger.py  make.py  make_test.py  models.py  new_loader.py  parser.py  parser_test.py  report.py  response.py  response_test.py  runner.py  runner_test.py  scaffold.py  schema.py  step.py  step_android.py  step_android_test.py  (+11 more)
installation/: index.html
mcphost/: README.md  chat.go  chat_test.go  config.go  config_test.go  dump.go  dump_test.go  host.go  host_test.go  mcp_server.go
planner/: env.go  go.mod  go.sum  parser.go  planner.go  planner_test.go  prompt-ui-tars.go  types.go
plugin/: README.md  go.mod  go.sum  plugin.go
plugin-gosdk/: build.go  host_test.go  interface.go  main.go
quickstart/: index.html
related-docs/: index.html
scripts/: build.sh  bump_version.sh  install-pre-commit-hook  install.sh
search/: search_index.json
server/: app.go  context.go  device.go  key.go  main.go  mcp_server.go  model.go  source.go  tool.go  ui.go  ui_test.go  uixt.go
sponsors/: index.html
test/: __init__.py  api_server.py  base.py  test_apiserver.py  test_apiserver_v2.py  test_client.py  test_context.py  test_main.py  test_response.py  test_runner.py  test_runner_v2.py  test_task.py  test_testcase.py  test_utils.py
tests/: .env  account.csv  api_server.py  base.py  build_test.go  cli_test.py  compat_test.py  debugtalk.py  demo_file_load_ws_message.txt  extract_test.go  function_test.go  loader_test.go  loader_test.py  make_test.py  parameters_test.go  parser_test.py  plugin_test.go  protocol_test.go  rendezvous_test.go  request_test.go  response_test.py  runner_test.go  runner_test.py  scaffold_test.py  step_rendezvous_test.go  step_request_test.go  step_ui_test.go  summary_test.go  test_api.py  test_apiserver.py  test_apiserver_v2.py  test_cli.py  test_client.py  test_context.py  test_httprunner.py  test_loader.py  test_parser.py  test_response.py  test_runner.py  test_runner_v2.py  (+10 more)
uixt/: android_device.go  android_driver_adb.go  android_driver_uia2.go  android_layout.go  android_test.go  browser_device.go  browser_driver.go  cache.go  cache_test.go  cache_test_summary.md  device.go  driver.go  driver_action.go  driver_ext_ai.go  driver_ext_ai_test.go  driver_ext_handler.go  driver_ext_popups.go  driver_ext_screenshot.go  driver_ext_swipe.go  driver_ext_tap.go  driver_ext_test.go  driver_handler.go  driver_session.go  driver_session_test.go  driver_utils.go  driver_utils_test.go  evalite  harmony_device.go  harmony_driver_hdc.go  (+19 more)
(+1441 files in other folders)
