[tool.poetry]
name = "httprunner"
version = "v4.3.5"
description = "One-stop solution for HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["debugtalk <debugtalk@gmail.com>"]

homepage = "https://httprunner.com"
repository = "https://github.com/httprunner/httprunner"
documentation = "https://httprunner.com/docs"

keywords = ["HTTP", "apitest", "perftest", "requests"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

include = ["docs/CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "~1.8"   # >=1.8.0 <1.9.0
loguru = "^0.4.1"
jmespath = "^0.9.5"
black = "^22.3.0"
pytest = "^7.1.1"
pytest-html = "^3.1.1"
sentry-sdk = "^0.14.4"
allure-pytest = {version = "^2.8.16", optional = true}
requests-toolbelt = {version = "^0.10.1", optional = true}
filetype = {version = "^1.0.7", optional = true}
Brotli = "^1.0.9"
jinja2 = "^3.0.3"
toml = "^0.10.2"
sqlalchemy = {version = "^1.4.36", optional = true}
pymysql = {version = "^1.0.2",optional = true}
cython = {version = "^0.29.28", optional = true}
thriftpy2 = {version = "^0.4.14", optional = true}
thrift = {version = "^0.16.0", optional = true}
pyyaml = "^6.0.1"
requests = "^2.31.0"
urllib3 = "^1.26"

[tool.poetry.extras]
allure = ["allure-pytest"]                  # pip install "httprunner[allure]", poetry install -E allure
upload = ["requests-toolbelt", "filetype"]  # pip install "httprunner[upload]", poetry install -E upload
sql = ["sqlalchemy","pymysql"]              # pip install "httprunner[sql]", poetry install -E sql
thrift = ["cython","thrift","thriftpy2"]    # pip install "httprunner[thrift]", poetry install -E sql

[tool.poetry.dev-dependencies]
coverage = "^4.5.4"

[tool.poetry.scripts]
httprunner = "httprunner.cli:main"
hrun = "httprunner.cli:main_hrun_alias"
hmake = "httprunner.cli:main_make_alias"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
